Introduced a new class loader to dynamically load libraries that are reference by the implementation platform.